[package]
name = "specs-blit"
version = "0.3.3"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
edition = "2018"
license = "GPL-3.0"
description = "2D sprite rendering extension for the Specs ECS system."
repository = "https://github.com/tversteeg/specs-blit"
documentation = "https://docs.rs/specs-blit"
keywords = ["gamedev", "ecs", "image", "sprite", "blitting"]
categories = ["concurrency", "game-engines", "games", "rendering", "multimedia::images"]
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "tversteeg/specs-blit" }
is-it-maintained-open-issues = { repository = "tversteeg/specs-blit" }

[dependencies]
anyhow = "1.0.27"
blit = "0.5.12"
lazy_static = "1.4.0"
rayon = "1.3.0"
rotsprite = "0.1.3"
specs = { version = "0.16.1", features = ["specs-derive"] }

[dev-dependencies]
image = "0.23.2"
minifb = "0.15.3"
