[package]
name = "specs-blit"
version = "0.5.2-alpha.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
edition = "2018"
license = "GPL-3.0"
description = "2D sprite rendering extension for the Specs ECS system."
repository = "https://github.com/tversteeg/specs-blit"
documentation = "https://docs.rs/specs-blit"
keywords = ["gamedev", "ecs", "image", "sprite", "blitting"]
categories = ["concurrency", "game-engines", "games", "rendering", "multimedia::images"]
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "tversteeg/specs-blit" }
is-it-maintained-open-issues = { repository = "tversteeg/specs-blit" }

[features]
default = ["parallel"]
parallel = ["rayon", "specs/parallel"]

[dependencies]
anyhow = "1.0.28"
blit = { version = "0.5.12", default-features = false }
lazy_static = "1.4.0"
rotsprite = "0.1.3"
rayon = { version = "1.3.0", optional = true }
specs = { version = "0.16.1", default-features = false, features = ["specs-derive"] }

[dev-dependencies]
image = "0.23.3"
minifb = "0.24.0"
blit = { version = "0.5.12", features = ["image"] }
